argocd/argocd-server-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      targetPort: 8080  # This should match the containerPort in ArgoCD's pod
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
